--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,10 @@ Version: 0.1.0
 Author: Julia Perera Bel
 Maintainer: Julia Perera Bel <jperera@imim.es>
 Description: Retrieve interactions between a set of miRNAs and a set of genes and computes correlations given expression data. The package uses TargetScan v7.2, miRDB v6 and mirTarBase v7.
-License:  MIT + file LICENSE
+License: MIT + file LICENSE
 Imports:
     biomaRt,
     openxlsx,
     miRBaseConverter,
     gplots
+RoxygenNote: 7.1.1
